[workspace]
resolver = "2"
members = [
    "coconut-bandwidth",
    "coconut-dkg",
    "coconut-test", 
    "ecash",
    "mixnet",
    "mixnet-vesting-integration-tests",
    "multisig/cw3-flex-multisig",
    "multisig/cw4-group",
    "vesting",
]

[workspace.package]
authors = ["Nym Technologies SA"]
repository = "https://github.com/nymtech/nym"
homepage = "https://nymtech.net"
documentation = "https://nymtech.net"
edition = "2021"
license = "Apache-2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
bs58 = "0.4.0"
cosmwasm-crypto = "=1.4.3"
cosmwasm-derive = "=1.4.3"
cosmwasm-schema = "=1.4.3"
cosmwasm-std = "=1.4.3"
cosmwasm-storage = "=1.4.3"
cw-controllers = "=1.1.0"
cw-multi-test = "=0.16.5"
cw-storage-plus = "=1.2.0"
cw-utils = "=1.0.1"
cw2 = "=1.1.2"
cw3 = "=1.1.2"
cw3-fixed-multisig = "=1.1.2"
cw4 = "=1.1.2"
cw20 = "=1.1.2"
semver = "1.0.21"
serde = "1.0.196"
sylvia = "0.8.0"
schemars = "0.8.16"

thiserror = "1.0.48"
