[workspace]
resolver = "2"
members = [
    "coconut-dkg",
    "ecash",
    "mixnet",
    "mixnet-vesting-integration-tests",
    "nym-pool",
    "multisig/cw3-flex-multisig",
    "multisig/cw4-group",
    "vesting",
]

[workspace.package]
authors = ["Nym Technologies SA"]
repository = "https://github.com/nymtech/nym"
homepage = "https://nymtech.net"
documentation = "https://nymtech.net"
edition = "2021"
license = "Apache-2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.86"
bs58 = "0.5.1"
cosmwasm-crypto = "=2.2.2"
cosmwasm-derive = "=2.2.2"
cosmwasm-schema = "=2.2.2"
cosmwasm-std = "=2.2.2"
cw-controllers = "=2.0.0"
cw-multi-test = "=2.3.2"
cw-storage-plus = "=2.0.0"
cw-utils = "=2.0.0"
cw2 = "=2.0.0"
cw3 = "=2.0.0"
cw3-fixed-multisig = "=2.0.0"
cw4 = "=2.0.0"
cw20 = "=2.0.0"
cw20-base = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
semver = "1.0.21"
serde = "1.0.196"
sylvia = "1.3.3"
schemars = "0.8.16"

thiserror = "2.0.11"
