[package]
name = "nym-explorer"
version = "0.1.0"
authors = ["dave <futurechimp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
tokio = { version = "0.2", features = ["full"] }
tokio-native-tls = "0.1.0"
tokio-tungstenite = {version = "0.11", features = ["tls"] }

# tungstenite = "0.11"
